# Audio

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py
.github/workflows/: build-publish.yml  build.yml  publish.yml
src/: audio_buffer.cpp  audio_buffer.hpp  audio_codec.cpp  audio_codec.hpp  audio_stream.cpp  audio_stream.hpp  audio_utils.hpp  discovery.cpp  main.cpp  microphone.cpp  microphone.hpp  mp3_decoder.cpp  mp3_decoder.hpp  mp3_encoder.cpp  mp3_encoder.hpp  portaudio.hpp  resample.hpp  speaker.cpp  speaker.hpp
test/: CMakeLists.txt  audio_stream_test.cpp  audio_utils_test.cpp  discovery_test.cpp  microphone_test.cpp  mp3_decoder_test.cpp  mp3_encoder_test.cpp  speaker_test.cpp  test_utils.hpp
